--- a/steps/policy-pages/accessibility/template.html
+++ b/steps/policy-pages/accessibility/template.html
@@ -6,36 +6,36 @@
 {% set telephoneDetails %}
     <div class="govuk-details__text">
         {% if isIba %}
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone[suffix].Scotland.desc }}</h3>
-            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone[suffix].Scotland.phone }}</p>
-            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone[suffix].Scotland.availability }}</p>
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone.iba.Scotland.desc }}</h3>
+            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone.iba.Scotland.phone }}</p>
+            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone.iba.Scotland.availability }}</p>
             <p class="govuk-body">
                 <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ content.telephone.charges }}</a>
             </p>
 
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone[suffix].England.desc }}</h3>
-            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone[suffix].England.phone }}</p>
-            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone[suffix].England.availability }}</p>
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone.iba.England.desc }}</h3>
+            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone.iba.England.phone }}</p>
+            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone.iba.England.availability }}</p>
             <p class="govuk-body govuk-!-margin-bottom-2">
                 <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ content.telephone.charges }}</a>
             </p>
 
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone[suffix].Welsh.desc }}</h3>
-            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone[suffix].Welsh.phone }}</p>
-            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone[suffix].Welsh.availability }}</p>
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone.iba.Welsh.desc }}</h3>
+            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone.iba.Welsh.phone }}</p>
+            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone.iba.Welsh.availability }}</p>
             <p class="govuk-body">
                 <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ content.telephone.charges }}</a>
             </p>
         {% else %}
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone[suffix].England.desc }}</h3>
-            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone[suffix].England.phone }}</p>
-            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone[suffix].England.availability }}</p>
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone.England.desc }}</h3>
+            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone.England.phone }}</p>
+            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone.England.availability }}</p>
             <p class="govuk-body govuk-!-margin-bottom-2">
                 <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ content.telephone.charges }}</a>
             </p>
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone[suffix].Scotland.desc }}</h3>
-            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone[suffix].Scotland.phone }}</p>
-            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone[suffix].Scotland.availability }}</p>
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">{{ content.telephone.Scotland.desc }}</h3>
+            <p class="govuk-body govuk-!-margin-bottom-0">{{ content.telephone.Scotland.phone }}</p>
+            <p class="govuk-body govuk-!-margin-bottom-2">{{ content.telephone.Scotland.availability }}</p>
             <p class="govuk-body">
                 <a rel="noopener noreferrer" class="govuk-link" href="https://www.gov.uk/call-charges" target="_blank">{{ content.telephone.charges }}</a>
             </p>
