removing rep title and passing it through empty for ibc cases

--- a/steps/representative/representative-details/template.html
+++ b/steps/representative/representative-details/template.html
@@ -10,8 +10,9 @@
         <legend class="govuk-visually-hidden">{{ content.title }}</legend>
 
         {{ errorsFor(fields.name) }}
-
-        {{ textbox(fields.name.title,    content.fields.name.title.title) }}
+        {% if not isIba %}
+            {{ textbox(fields.name.title,    content.fields.name.title.title) }}
+        {% endif %}
         {{ textbox(fields.name.first,    content.fields.name.first.title) }}
         {{ textbox(fields.name.last,     content.fields.name.last.title) }}
         {{ textbox(fields.name.organisation, content.fields.name.organisation.title) }}
