--- a/steps/identity/appellant-contact-details/answer.html
+++ b/steps/identity/appellant-contact-details/answer.html
@@ -9,8 +9,8 @@
             {{ fields.postCode.value }}<br>
         </dd>
         <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
-            <span class="govuk-visually-hidden"> {{ content.cya.yourDetails }}</span>
+            <a id="cya-change-appellantcontactdetails" aria-labelledby="cya-change-appellantcontactdetails cya-appellantcontactdetails-label" class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
+            <span id="cya-appellantcontactdetails-label" class="govuk-visually-hidden"> {{ content.cya.yourDetails }}</span>
         </dd>
     </dl>
 </div>
