--- a/steps/hearing/options/answer.html
+++ b/steps/hearing/options/answer.html
@@ -5,8 +5,8 @@
             <dd class="govuk-summary-list__value">{{ answer }}</dd>
             <dd class="govuk-summary-list__actions">
                 {% if loop.first %}
-                    <a class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
-                    <span class="govuk-visually-hidden"> {{ content.cya.options }}</span>
+                    <a id="cya-change-hearingoptions" aria-labelledby="cya-change-hearingoptions cya-hearingoptions-label" class="govuk-link" href="{{ path }}">{{ content.cya.change }}</a>
+                    <span id="cya-hearingoptions-label" class="govuk-visually-hidden"> {{ content.cya.options }}</span>
                 {% endif %}
             </dd>
         </dl>
