SSCSCI-1611: Refactoring appellant in mainland uk page

--- a/steps/identity/appellant-in-mainland-uk/template.html
+++ b/steps/identity/appellant-in-mainland-uk/template.html
@@ -1,22 +1,14 @@
 {% extends "components/form-template.html" %}
-{% from "components/fields.njk" import formSection, selectionButtons, textarea, textbox, select %}
-{% from "components/toggle_help.njk" import toggleHelp %}
-{% from "details/macro.njk" import govukDetails %}
+{% from "components/fields.njk" import formSection %}
+{% from "components/common/radio.njk" import govRadio %}
 
 {% set title = content.title %}
 
 {% block fields %}
-    <div id="appellantInMainlandUk">
-        {% call formSection() %}
-            {{ selectionButtons(
-                fields.inMainlandUk,
-                content.question,
-                hint = '',
-                options = [
-                    { label: content.fields.inMainlandUk.yes, value: "yes" },
-                    { label: content.fields.inMainlandUk.no,  value: "no" }
-                ])
-            }}
-        {% endcall %}
-    </div>
+    {% call formSection() %}
+        {{ govRadio(field=fields.inMainlandUk, headerText=content.question, hideQuestion=true, items = [
+        { value: "yes", text: content.fields.inMainlandUk.yes },
+        { value: "no", text: content.fields.inMainlandUk.no }
+        ]) }}
+    {% endcall %}
 {% endblock %}
