--- a/steps/sms-notify/text-reminders/template.html
+++ b/steps/sms-notify/text-reminders/template.html
@@ -1,20 +1,19 @@
 {% extends "components/form-template.html" %}
 {% from "components/fields.njk" import formSection, selectionButtons %}
+{% from "components/common/radio.njk" import govRadio %}
 
-{% set title = content.title | safe %}
+{% set title = content.title %}
 
 {% block fields %}
     {% call formSection() %}
         <p class="govuk-body">{{ content.subtitle }}</p>
 
-        {{ selectionButtons(
-            fields.doYouWantTextMsgReminders,
-            content.fields.doYouWantTextMsgReminders.label,
+        {{ govRadio(field=fields.doYouWantTextMsgReminders,
+            headerText=content.fields.doYouWantTextMsgReminders.label,
             hideQuestion = true,
-            options = [
-                { label: content.fields.doYouWantTextMsgReminders.yes, value: "yes" },
-                { label: content.fields.doYouWantTextMsgReminders.no, value: "no" }
-            ])
-        }}
+            items = [
+                { text: content.fields.doYouWantTextMsgReminders.yes, value: "yes" },
+                { text: content.fields.doYouWantTextMsgReminders.no, value: "no" }
+        ]) }}
     {% endcall %}
 {% endblock %}
